src-tauri/check_output_utf8_5.txt
cargo :     Checking 
sdp-catcher v1.0.1 (D:\U
tilisateur\Documents\Sit
es_web\SDP 
Catcher\src-tauri)
Au caractère Ligne:1 : 
15
+ cd src-tauri; cargo 
check > 
check_output_5.txt 
2>&1; Get-Content chec 
...
+               ~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo      
        : NotSpecified  
  : (    Checking sd.   
 ..cher\src-tauri):S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
warning: unused import: 
`pcap::Device`
  --> src\lib.rs:12:5
   |
12 | use pcap::Device;
   |     ^^^^^^^^^^^^
   |
   = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

error[E0599]: the 
method `to_string` 
exists for reference `&d
ns_parser::rdata::A`, 
but its trait bounds 
were not satisfied
   --> src\lib.rs:316:84
    |
316 | ...               
    let ip_str = 
ip_record.to_string();
    |                   
                        
   ^^^^^^^^^ method 
cannot be called on 
`&dns_parser::rdata::A` 
due to unsatisfied 
trait bounds
    |
   ::: C:\Users\allan\.c
argo\registry\src\index.
crates.io-1949cf8c6b5b55
7f\dns-parser-0.8.0\src\
rdata\a.rs:7:1
    |
  7 | pub struct 
Record(pub Ipv4Addr);
    | ----------------- 
doesn't satisfy 
`dns_parser::rdata::A: 
ToString` or 
`dns_parser::rdata::A: 
std::fmt::Display`
    |
    = note: the 
following trait bounds 
were not satisfied:
            
`dns_parser::rdata::A: 
std::fmt::Display`
            which is 
required by 
`dns_parser::rdata::A: 
ToString`
            
`&dns_parser::rdata::A: 
std::fmt::Display`
            which is 
required by 
`&dns_parser::rdata::A: 
ToString`

For more information 
about this error, try 
`rustc --explain E0599`.
warning: `sdp-catcher` 
(lib) generated 1 
warning
error: could not 
compile `sdp-catcher` 
(lib) due to 1 previous 
error; 1 warning emitted
